@@ -674,6 +674,7 @@ Daniel Stutzbach
 Nathan Sullivan
 Mark Summerfield
 Hisao Suzuki
+Andrew Svetlov
 Kalle Svensson
 Paul Swartz
 Thenault Sylvain
